<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/first_name_hint"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/last_name_hint"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/phone_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button_submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/submit_button"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_list"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_weight="1"
                android:text="@string/show_button"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_cat"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_weight="1"
                android:text="@string/show_cats"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>